--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,3 +7,11 @@
   --destaque-inverso
   --fundo-card
 */
+
+body{
+  background-color: blue;
+  color: aliceblue;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
