--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,10 +8,54 @@
   --fundo-card
 */
 
-body{
-  background-color: blue;
-  color: aliceblue;
+*{
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+}
+
+:root{
+  /*Variáveis para cores:*/
+  --fundo-principal: #f5f5f5;
+  --texto: #222222;
+  --texto-inverso: #ffffff;
+  --destaque: #0077ff;
+  --destaque-inverso: #66bbff;
+  --fundo-card: #ffffff;
+}
+
+body{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.5em;
+  background-color: var(--fundo-principal);
+  color: var(--texto)
+}
+
+header{
+  background-color: var(--destaque);
+  color: var(--texto);
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+}
+nav#menu ul{
+  list-style: none;
+  display: flex;
+  gap: 10px;  
+  padding: 10px;
+}
+
+nav#menu a{
+  text-decoration: none;
+  color: var(--texto-inverso);
+  font-size: 1.6em;
+  font-weight: 600;
+  padding: 12px 15px;
+  border-radius: 5px;
+  transition: backgraound-color 0.6s, color 0.6s;
+}
+nav#menu a:hover{
+  background-color: var(--destaque-inverso);
+  color: var(--destaque);
 }
