--- a/estilos/style.css
+++ b/estilos/style.css
@@ -25,6 +25,7 @@
 }
 
 body{
+  background-color: var(--fundo-principal);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   line-height: 1.5em;
   background-color: var(--fundo-principal);
@@ -58,4 +59,62 @@ nav#menu a{
 nav#menu a:hover{
   background-color: var(--destaque-inverso);
   color: var(--destaque);
+}
+
+div#perfil{
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  background-color:var(--fundo-card);
+  border-radius: 10px;
+  width: 90vw;
+  margin: auto;
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.247);
+ 
+}
+div#perfil img{
+  object-fit: top center;
+  width: 180px;          
+  height: 180px;  
+  border-radius: 50%;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  outline: 4px solid var(--destaque);
+  outline-offset: 2px;
+}
+div#perfil h1{
+  align-self: flex-start;
+  color: var(--destaque);
+  margin: 0px 0px 10px 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.199)
+  
+}
+div#perfil p{
+  font-size: 1.3em;
+  line-height: 23px;
+  color: var(--texto);
+  align-self: center;
+  text-align: justify;
+  width: 80vw;
+}
+
+nav#rede ul{
+  list-style: none; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  margin: 20px 0px 10px 0px ;
+}
+
+nav#rede a{
+  color: var(--destaque);
+  font-size: 3em;
+  font-weight: 600;
+  padding: 12px 15px;
+  transition: color 0.5s;
+}
+nav#rede a:hover{
+  color: var(--destaque-inverso);
 }
