--- a/estilos/style.css
+++ b/estilos/style.css
@@ -22,6 +22,9 @@
   --destaque: #0077ff;
   --destaque-inverso: #66bbff;
   --fundo-card: #ffffff;
+  --barra-altura: 10px;
+  --barra-fundo: #e6e6e6;
+  --barra-cor: var(--destaque, #66bbff);
 }
 
 body{
@@ -39,6 +42,9 @@ body.escuro {
   --destaque: #B85600;
   --destaque-inverso: #FF9333;
   --fundo-card: #2a2a2a;
+  --barra-fundo: #4d4c4c;
+  --barra-cor: var(--destaque);
+  
 }
 
 
@@ -65,7 +71,7 @@ nav#menu a{
   font-weight: 600;
   padding: 12px 15px;
   border-radius: 5px;
-  transition: backgraound-color 0.6s, color 0.6s;
+  transition: background-color 0.6s, color 0.6s;
 }
 nav#menu a:hover{
   background-color: var(--destaque-inverso);
@@ -76,7 +82,7 @@ main{
   grid-template-columns: 5% 90% 5%;
   grid-template-rows: auto auto;
   justify-content: center;
-  gap: 5px;
+  gap: 10px;
   width: 100vw;
   max-width: 100vw;
 }
@@ -86,7 +92,6 @@ div#perfil{
   padding: 8px;
   background-color:var(--fundo-card);
   border-radius: 10px;
-  margin: auto;
   box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.247);
   transition: background-color 0.5s ease, color 0.5s ease;
 }
@@ -96,24 +101,33 @@ div#perfil img{
   width: 180px;          
   height: 180px;  
   border-radius: 50%;
-  
   outline: 4px solid var(--destaque);
   outline-offset: 2px;
 }
-div#perfil h1{
-  
+div#perfil h1, div#detalhes h1{
   color: var(--destaque);
-  margin: 0px 0px 10px 20px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.199)
-  
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.199);
+  margin-top: 10px;
 }
 div#perfil p{
+  padding:10px;
   font-size: 1.3em;
   line-height: 23px;
   color: var(--texto);
   align-self: center;
   text-align: justify;
   width: 80vw;
+}
+
+div#detalhes{
+  grid-column: 2;
+  grid-row: 2;
+  padding: 8px;
+  background-color:var(--fundo-card);
+  border-radius: 10px;
+  
+  box-shadow: 0px 2px 5px 1px rgba(0, 0, 0, 0.247);
+  transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 nav#rede ul{
@@ -134,4 +148,41 @@ nav#rede a{
 }
 nav#rede a:hover{
   color: var(--destaque-inverso);
+}
+
+section.skills{
+  display: grid;
+  gap: 18px 28px;
+  grid-template-columns: 1fr;
+  margin: 20px 0px;
+}
+div.titulo{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 800;
+  margin-bottom: 10px;
+  
+}
+div.titulo > div.esqueda{
+  display: inline-block;
+  align-items: center;
+  gap:10px
+}
+div.titulo > span.porcentagem{
+  color: var(--destaque)
+}
+div.barra-fundo{
+  height: var(--barra-altura);
+  background: var(--barra-fundo);
+  border-radius: 99px;
+  overflow: hidden;
+   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.151);
+}
+div.cor-barra{
+  height: 100%;
+  width: calc(var(--porcentagem, 0) *1%);/* convertendo o valor dado em skill para porcentagem  se a variavel não existir definir para 0*/
+  background:var(--barra-cor);
+  border-radius: inherit;
+  transition: width .8s ease; 
 }
