--- a/estilos/style.css
+++ b/estilos/style.css
@@ -79,12 +79,11 @@ nav#menu a:hover{
 }
 main{
   display: grid;
-  grid-template-columns: 5% 90% 5%;
+  grid-template-columns: 1fr 8fr 1fr;
   grid-template-rows: auto auto;
   justify-content: center;
-  gap: 10px;
-  width: 100vw;
-  max-width: 100vw;
+  margin: 0 auto;
+  row-gap: 25px;
 }
 div#perfil{
   grid-column: 2;
@@ -116,10 +115,10 @@ div#perfil p{
   color: var(--texto);
   align-self: center;
   text-align: justify;
-  width: 80vw;
+  width: 100%;
 }
 
-div#detalhes{
+div.detalhes{
   grid-column: 2;
   grid-row: 2;
   padding: 8px;
